--- a/wordpress/wp-content/themes/twentytwentyone/style.css
+++ b/wordpress/wp-content/themes/twentytwentyone/style.css
@@ -5911,8 +5911,11 @@ footer {
 }
 /* Footer */
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+.padding-top{
+	padding-top: 60px;
+}
 section {
-	padding: 60px 0;
+	padding: 0px 0;
 }
 
 section .section-title {
